# csv2shex

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  Harold.txt  LICENSE  README.md  README.rst  changed  changed2  cli.py  diff_46730db_08e5466.txt  line  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  setup.py  trivial_change
csv2shex/: .config.py.swp  .csvrows.py.swp  .csvshapes.py.swp  .model.py.swp  __init__.py  apply.py__  check.py  cli.py  config.py  constants.py  csv2stats.py  csvparser.py  csvreader.py  csvreader_outline.txt  csvrow.py  csvrows.py  csvshape.py  csvshapes.ps  csvshapes.py  defaults.py  example.py  exceptions.py  expand.py  inspect.py  mkshapes.py  mkshex.py  mkstatements.py  mkstatements_changed.py  mkstatements_orig.py  mkyaml.py  model.py  my.csv  prefixes.py  readwrite.py  settings.py  shapetoshex.py  stats2shapes.py  utils.py
docs/: Command_line_utility.rst  Examples.rst  Review_DCSRAPAP.xlsx  build.sh  conf.py  examples.rst  index.rst  requirements.txt
example_instances/: book_terse.csv  book_terse.yaml  recipe_schemaorg.yaml
example_profiles/: absolute_minimal_profile.csv  absolute_minimal_profile.shex  absolute_minimal_profile.yaml  book.csv  book.yaml  book_and_owner.csv  book_and_owner.yaml  book_and_person.csv  book_and_person.yaml  book_for_documentation.csv  book_for_documentation.yaml  book_for_test.csv  book_for_test.yaml  book_minimal.csv  book_minimal.yaml  hospital_wikidata.yaml  painting_wikidata_E130.csv  painting_wikidata_E130.yaml  profile_of_profile.yaml
(+308 files in other folders)
